...
    <string name="app_name">Flashcards</string>
    <string name="answerIsTrue">Answer:</string>
    <string name="question">Question:</string>
    <string name="answer_type">Answer Type:</string>
    <string name="text_answer">Text</string>
    <string name="categories">Categories:</string>
    <string name="save">Save</string>
    <string name="name_missing">Your Flashcard does not have a valid Name. (Can\'t be empty)</string>
    <string name="question_missing">Your Flashcard does not have a valid Question. (Can\'t be empty)</string>
    <string name="answer_missing">Your Flashcard does not have a valid Answer. (Can\'t be empty)</string>
    <string name="flashcard_dup_name">A Flashcard with that name already exists.</string>
    <string name="success_card_saved">Success! Your Flashcard has been saved.</string>
    <string name="success_card_created">Success! Your Flashcard has been created.</string>
...
    <string name="return_to_main">Return</string>
    <string name="name">Name</string>
    <string name="score">Score:</string>
    <string name="see_answer">See answerIsTrue</string>
    <string name="category_name_missing">A Category requires a name</string>
    <string name="category_dup_name">A Category with that name already exists.</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="enter_category_name">Enter a Category name</string>
    <string name="failed_to_save">Failed to save the card</string>
    <string name="failed_to_delete">Failed to delete the Category</string>
    <string name="failed_to_update_category">Failed to update the Category</string>
    <string name="failed_to_remove_flashcard">Failed to remove the Flashcard</string>
...
